# VoxelEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  log.txt  notes.md
assets/shaders/: Fragment.shader  Vertex.shader
src/: main.cpp
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  Window.cpp  Window.h
src/graphics/: GLUtils.cpp  GLUtils.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/player/: Camera.cpp  Camera.h  Player.cpp  Player.h
src/world/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  World.cpp  World.h
